Range: surroundContents() should not check detached CharacterData node beforehand.

Our implementation had unnecessary precondition check for detached
CharacterData, and it's not defined by the DOM standard. This CL removes it.

* fast/dom/Range/31684.html: Removed
 This CL changes the exception message in this test. We remove this because
 It's well tested in WPT.

BUG=700275

Review-Url: https://codereview.chromium.org/2740293002
Cr-Commit-Position: refs/heads/master@{#456037}

Former-commit-id: cfb61c80a7256f706df0fd62de61afd5c62ccb69